# DeepLearningStudio

./: .gitignore  CMakeLists.txt  README.md
assets/: assets.qrc
cmake/: ConfigBuildTree.cmake  ConfigCUDA.cmake  ConfigCompiler.cmake  ConfigQT.cmake  PrintConfig.cmake
src/: CMakeLists.txt  main.cpp  qtquickcontrols2.conf
src/QuickUI/: CMakeLists.txt  color.cpp  color.h  stdafx.h  theme.cpp  theme.h  tools.cpp  tools.h
src/QuickUI/Controls/: CollapsiblePanel.qml  DropDownMenuButton.qml  Expander.qml  QuickCheckBox.qml  QuickComboBox.qml  QuickProgressBar.qml  QuickSlider.qml  QuickSwitch.qml  QuickTabBar.qml  QuickTabButton.qml  QuickTextField.qml  QuickToolButton.qml
src/QuickUIPlugin/: CMakeLists.txt  CollapsiblePanel.qml
src/qml/: Main.qml
src/qml/Components/: Expander.qml
src/qml/Evaluation/: EvalCenterPanel.qml  EvalLeftPanel.qml  Evaluation.qml
src/qml/Export/: ExportLeftPanel.qml
src/qml/Gallery/: DatasetPanel.qml  Gallery.qml  GalleryCenterPanel.qml  GalleryLeftPanel.qml  ImageSizePanel.qml  SelectedInfoPanel.qml
src/qml/Gallery/Component/: DatasetPanel.qml  GalleryToolBar.qml  ImageInfoPanel.qml  ImageSizePanel.qml  SelectedInfoPanel.qml
src/qml/Labelling/: Labelling.qml  LabellingCenterPanel.qml  LabellingLeftPanel.qml  LabellingRightPanel.qml
src/qml/Labelling/Component/: EditableRectsRepeater.qml  ImageFileListPanel.qml  ImageFlipPanel.qml  LabelClassComboBox.qml  LabelClassesPanel.qml  LabelClassesView.qml  LabelInstanceEditorPanel.qml  LabelInstancesPanel.qml  LabelRegion.qml  LabelSettingsPanel.qml
src/qml/MainWindow/: MainFooter.qml  MainHeader.qml  MainMenu.qml  MainStackLayout.qml  MainTabBar.qml  MainTabButton.qml
src/qml/MainWindow/Component/: SearchBar.qml
src/qml/Project/: MyButton.qml  Project.qml  ProjectCenterPanel.qml  ProjectDescription.qml  ProjectDescriptionPanel.qml  ProjectItemDegelate.qml  ProjectLeftPanel.qml  ProjectSummary.qml  ProjectToolButton.qml
src/qml/Review/: Review.qml  ReviewCenterPanel.qml  ReviewLeftPanel.qml
src/qml/Review/Component/: LabelClassesFilterPanel.qml  ReviewToolBar.qml  SelectedInstancesPanel.qml
src/qml/Theme/: Dark.qml
src/qml/Training/: ModelItemDelegate.qml  Training.qml  TrainingCenterPanel.qml  TrainingLeftPane.qml  TrainingLeftPanel.qml  TrainingModelPanel.qml  TrainingTabBar.qml  TrainingTabButton.qml
src/qml/Training/Component/: DatasetComboBox.qml  TrainingListView.qml  TrainingModelPanel.qml
tests/: CMakeLists.txt
tests/qml/: Abcd.qml  CMakeLists.txt  tst_abcd.qml
